--- a/build.gradle
+++ b/build.gradle
@@ -34,4 +34,5 @@ dependencies {
 	compileOnly('org.projectlombok:lombok')
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 	testImplementation('org.springframework.security:spring-security-test')
+	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 }
