Application displays index page on load instead of login

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,4 @@
-## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/voluntech
 
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-
-# Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = update
-spring.jpa.properties.jdbc.lob.non_contextual_creation=true
+spring.jpa.hibernate.ddl-auto=create
