--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,7 +10,7 @@
     "heroku-postbuild": "webpack --progress --config webpack.prod.js",
     "postinstall": "npm run build",
     "webpack": "webpack-cli --config='config/webpack.config.js'",
-    "build": "webpack --config webpack.prod.js"
+    "build": "rm ../src/main/resources/static/* && rm ../src/main/resources/templates/* && webpack --config webpack.prod.js && mv ../src/main/resources/static/index.html ../src/main/resources/templates/"
   },
   "keywords": [],
   "author": "",
@@ -35,6 +35,7 @@
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.4",
     "node-sass": "^4.9.3",
+    "path": "^0.12.7",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
