--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,10 @@
+#Auth0 Properties
+com.auth0.domain: seattlevoluntech.auth0.com
+com.auth0.clientId: eA7KPyjMl8Ylvu7g67C5TYK9tSUaIQX7
+
+#Postgres properties
 spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/voluntech
 
+#Create tables in datasource.url if they do not exist
 spring.jpa.hibernate.ddl-auto=create
