--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ repositories {
 
 
 dependencies {
+	compile 'com.auth0:mvc-auth-commons:1.+'
 	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
 	implementation('org.springframework.boot:spring-boot-starter-mail')
 	implementation('org.springframework.boot:spring-boot-starter-security')
@@ -35,4 +36,11 @@ dependencies {
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 	testImplementation('org.springframework.security:spring-security-test')
 	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
+	compile('com.auth0:java-jwt:3.4.0')
+
+	runtime 'org.springframework.boot:spring-boot-starter-tomcat:1.5.6.RELEASE'
+    runtime 'org.springframework.security:spring-security-taglibs:4.2.3.RELEASE'
+    runtime 'org.apache.tomcat.embed:tomcat-embed-jasper:8.5.20'
+    runtime 'javax.servlet:jstl:1.2'
 }
+
