--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,7 +10,7 @@
     "heroku-postbuild": "webpack --progress --config webpack.prod.js",
     "postinstall": "npm run build",
     "webpack": "webpack-cli --config='config/webpack.config.js'",
-    "build": "rm ../src/main/resources/static/* && rm ../src/main/resources/templates/* && webpack --config webpack.prod.js && mv ../src/main/resources/static/index.html ../src/main/resources/templates/"
+    "build": "rm -rf ../src/main/resources/static/* && rm -rf ../src/main/resources/templates/* && webpack --config webpack.prod.js && mv ../src/main/resources/static/index.html ../src/main/resources/templates/"
   },
   "keywords": [],
   "author": "",
