--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/voluntech
 
 #Create tables in datasource.url if they do not exist
 spring.jpa.hibernate.ddl-auto=create
+
+
+spring.datasource.username=postgres
+spring.datasource.password=winner#1
