update db properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/voluntech
 
 
 #Create tables in datasource.url if they do not exist
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
