Added new build file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@ com.auth0.clientId: eA7KPyjMl8Ylvu7g67C5TYK9tSUaIQX7
 #Postgres properties
 spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/voluntech
+spring.datasource.username=postgres
+spring.datasource.password=M8iku9ahk!
 
 
 #Create tables in datasource.url if they do not exist
