Make application properties env variables.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,9 @@ com.auth0.clientId: eA7KPyjMl8Ylvu7g67C5TYK9tSUaIQX7
 
 #Postgres properties
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/voluntech
+spring.datasource.url=${JDBC_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS}
 
-
-#Create tables in datasource.url if they do not exist
-spring.jpa.hibernate.ddl-auto=update
+#Do nothing
+spring.jpa.hibernate.ddl-auto=none
