[Issue 63] Created Linking endpoint between user and project
issue link: https://github.com/SeattleVoluntech/seattlevoluntech/issues/63
pr: https://github.com/SeattleVoluntech/seattlevoluntech/pull/96

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,4 @@ spring.datasource.password=${DB_PASS}
 #spring.jpa.hibernate.ddl-auto=none
 
 #Create tables in datasource.url if they do not exist
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
