Overwrite and public read s3 deploy

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,8 @@ deploy:
   secret_access_key: $SECRET_KEY
   skip-cleanup: true
   bucket: seattlevoluntech
+  overwrite: true
+  acl: public_read
   on:
     branch: master
   local-dir: ./front-end/build
