--- a/front-end/package.json
+++ b/front-end/package.json
@@ -60,6 +60,8 @@
     "lodash": "latest",
     "match-sorter": "^2.3.0",
     "namor": "^1.1.1",
+    "react-burger-menu": "^2.6.2",
+    "react-media": "^1.9.2",
     "react-pose": "^4.0.5",
     "react-pose-text": "^3.1.0"
   }
