--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 	compile('com.auth0:java-jwt:3.4.0')
 	compile group: 'com.google.guava', name: 'guava', version: '23.5-jre'
+	compile group: 'com.mashape.unirest', name: 'unirest-java', version: '1.3.1'
 	runtime 'org.springframework.boot:spring-boot-starter-tomcat:1.5.6.RELEASE'
     runtime 'org.springframework.security:spring-security-taglibs:4.2.3.RELEASE'
     runtime 'org.apache.tomcat.embed:tomcat-embed-jasper:8.5.20'
